# quasar

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/quasar/: Bitcode.hpp  Iteration.hpp  Parser.hpp  Simd.hpp
quasar/: main.cpp
src/quasar/: Bitcode.cpp  main.cpp
